--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "resolve-url-loader": "^5.0.0",
-    "sass": "^1.63.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.63.6"
   }
 }
