--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-three-fiber": "^6.0.13",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "resolve-url-loader": "^5.0.0",
+    "three": "^0.154.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
