--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "css-loader": "^6.8.1",
+    "gapi-script": "^1.2.0",
     "gsap": "^3.12.2",
     "postcss-loader": "^7.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-redux": "^8.1.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.14.1",
