--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-input-material-ui": "^2.18.1",
     "react-redux": "^8.1.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
     "react-three-fiber": "^6.0.13",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
